--- a/.github/helpers/.env-unit
+++ b/.github/helpers/.env-unit
@@ -16,3 +16,4 @@ EXCHANGE_RATES_API_KEY=token
 CACHE_LOCATION=redis://valkey:6379/1
 CONSTANCE_REDIS_CONNECTION=redis://valkey:6379/0
 PYTHONUNBUFFERED=1
+CACHE_ENABLED=false
