more text fixes

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,15 +1,15 @@
 [pytest]
-generate_report_on_test = True
+generate_report_on_test = False
 DJANGO_SETTINGS_MODULE = hct_mis_api.config.settings
-addopts =
-        -sv
-        -rP
-        -p no:capturelog
-        -p no:warnings
-        --tb=short
-        --maxfail=20
-        --capture=sys
-        --reuse-db
-        --echo-version django
-        --cov-config=.coveragerc
-        --cov=hct_mis_api
+; addopts =
+;         -sv
+;         -rP
+;         -p no:capturelog
+;         -p no:warnings
+;         --tb=short
+;         --maxfail=20
+;         --capture=sys
+;         --reuse-db
+;         --echo-version django
+;         --cov-config=.coveragerc
+;         --cov=hct_mis_api
