--- a/.github/helpers/.env-unit
+++ b/.github/helpers/.env-unit
@@ -15,4 +15,5 @@ KOBO_MASTER_API_TOKEN=token
 EXCHANGE_RATES_API_KEY=token
 CACHE_LOCATION=redis://valkey:6379/1
 CONSTANCE_REDIS_CONNECTION=redis://valkey:6379/0
+CACHE_ENABLED=false
 PYTHONUNBUFFERED=1
