--- a/development_tools/compose.yml
+++ b/development_tools/compose.yml
@@ -1,124 +1,22 @@
 volumes:
-  backend-data:
   db:
   data_es:
-  ipython_data_local:
 
 
 services:
-
-  backend:
-    image: unicef/hct-mis-backend
-    profiles:
-      - default
-    entrypoint: entrypoint.sh
-    stdin_open: true
-    env_file:
-      - .env
-    environment:
-      - PYTHONUNBUFFERED=1
-    build:
-      context: ..
-      dockerfile: ./docker/Dockerfile
-      target: dev
-    ports:
-      - "8080:8000"
-    volumes:
-      - ../src:/app/src
-      - ../tests:/app/tests
-      - backend-data:/data
-      - ../pyproject.toml:/app/pyproject.toml
-      - ../uv.lock:/packages/uv.lock
-      - ipython_data_local:/root/.ipython
-    command: "dev"
-    depends_on:
-      db:
-        condition: service_healthy
-      valkey:
-        condition: service_healthy
-      elasticsearch:
-        condition: service_healthy
-    healthcheck:
-      test: [
-        "CMD",
-        "python3",
-        "-c",
-        "import http.client; \
-        conn = http.client.HTTPConnection('localhost', 8000); \
-        conn.request('GET', '/_health'); \
-        response = conn.getresponse(); \
-        exit(0) if response.status == 200 else exit(1);"
-      ]
-      interval: 10s
-      timeout: 10s
-      retries: 10
-
-  celery-worker:
-    profiles:
-      - default
-    stdin_open: true
-    tty: true
-    image: unicef/hct-mis-backend
-    env_file:
-      - .env
-    volumes:
-      - ../src:/app/src
-      - backend-data:/data
-    command: "celery-worker"
-    depends_on:
-      backend:
-        condition: service_started
-      db:
-        condition: service_healthy
-      valkey:
-        condition: service_healthy
-      elasticsearch:
-        condition: service_healthy
-    healthcheck:
-      test: [ "CMD", "celery", "status" ]
-      interval: 10s
-      timeout: 10s
-      retries: 5
-
-  celery-beat:
-    profiles:
-      - default
-    stdin_open: true
-    tty: true
-    image: unicef/hct-mis-backend
-    env_file:
-      - .env
-    volumes:
-      - ../src:/app/src/
-      - backend-data:/data
-    command: "celery-beat"
-    depends_on:
-      backend:
-        condition: service_started
-      db:
-        condition: service_healthy
-      valkey:
-        condition: service_healthy
-      elasticsearch:
-        condition: service_healthy
-    healthcheck:
-      test: [ "CMD", "celery", "status" ]
-      interval: 10s
-      timeout: 10s
-      retries: 5
-
   db:
     image: kartoza/postgis:14-3
-    profiles:
-      - default
-      - services
     command: -c 'max_connections=200'
     volumes:
       - db:/var/lib/postgresql/data
       - ./postgres/init:/docker-entrypoint-initdb.d
     environment:
-      POSTGRES_MULTIPLE_DATABASES: unicef_hct_mis_cashassist,rdi_datahub,mis_datahub,erp_datahub,ca_datahub
-      EXTRA_CONF: max_connections=1000
+      - EXTRA_CONF=max_connections=1000
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASS=postgres
+      - PGUSER=postgres
+      - POSTGRES_HOST_AUTH_METHOD=trust
     env_file:
       - .env
     ports:
@@ -131,9 +29,6 @@ services:
 
   valkey:
     image: valkey/valkey:8.0.2-alpine
-    profiles:
-      - default
-      - services
     ports:
       - "6379:6379"
     healthcheck:
@@ -144,9 +39,6 @@ services:
 
   elasticsearch:
     image: unicef/hct-elasticsearch
-    profiles:
-      - default
-      - services
     build:
       context: elasticsearch
       dockerfile: ./Dockerfile
@@ -171,21 +63,3 @@ services:
       timeout: 10s
       retries: 3
 
-  celery-flower:
-    profiles:
-      - default
-    stdin_open: true
-    image: unicef/hct-mis-backend
-    env_file:
-      - .env
-    command: "celery-flower"
-    volumes:
-      - ../src:/app/src
-      - backend-data:/data
-    ports:
-      - "5555:5555"
-    environment:
-      - PYTHONUNBUFFERED=1
-    depends_on:
-      - celery-worker
-      - valkey
