--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,14 +45,14 @@ jobs:
 
       - name: Wait for Postgres to be ready
         run: |
-          until docker exec $(docker-compose ps -q db) pg_isready -U postgres; do
+          until docker exec $(docker-compose -f development_tools/compose.yml ps -q db) pg_isready -U postgres; do
             echo "Waiting for Postgres..."
             sleep 2
           done
 
       - name: Wait for Redis to be ready
         run: |
-          until docker exec $(docker-compose ps -q redis) redis-cli ping | grep PONG; do
+          until docker exec $(docker-compose -f development_tools/compose.yml  ps -q redis) redis-cli ping | grep PONG; do
             echo "Waiting for Redis..."
             sleep 2
           done
