--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,12 @@ jobs:
         run: uv sync --cache-dir ./uv-cache --frozen
 
       - name: testing key
-        run: echo ${{ steps.cache-venv-restore.outputs.cache-primary-key }}
+        run: |
+          echo "testing key"
+          echo ${{ steps.cache-venv-restore.outputs.cache-primary-key }}
+          echo ${{ steps.cache-venv-restore.outputs.cache-hit }}
+          echo ${{ steps.cache-venv-save.outputs.cache-hit }}
+          echo ${{ runner.os }}-venv
 
       - name: Save vEnv cache
         id: cache-venv-save
