--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,3 @@
-name: CI
-
-on:
-  push:
-    branches:
-    - develop
-    - staging
-    - master
-    - ephemeral-*
-  pull_request:
-    branches:
-    - develop
-    - staging
-    - master
-    - ephemeral-*
-    - long-term/*
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -30,6 +9,27 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends \
+            build-essential \
+            libjpeg-dev \
+            zlib1g-dev \
+            postgresql-client \
+            libpq-dev \
+            python3-psycopg2 \
+            python3-gdal \
+            gdal-bin \
+            libcairo2 \
+            libcairo2-dev \
+            libffi-dev \
+            libgdk-pixbuf2.0-0 \
+            libpango-1.0-0 \
+            libpangocairo-1.0-0 \
+            shared-mime-info \
+            wkhtmltopdf
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
