--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,24 @@
+name: CI
+
+on:
+  push:
+    branches:
+    - develop
+    - staging
+    - master
+    - ephemeral-*
+  pull_request:
+    branches:
+    - develop
+    - staging
+    - master
+    - ephemeral-*
+    - long-term/*
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
