--- a/development_tools/compose.yml
+++ b/development_tools/compose.yml
@@ -34,7 +34,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      valkey:
+      redis:
         condition: service_healthy
       elasticsearch:
         condition: service_healthy
@@ -70,7 +70,7 @@ services:
         condition: service_started
       db:
         condition: service_healthy
-      valkey:
+      redis:
         condition: service_healthy
       elasticsearch:
         condition: service_healthy
@@ -97,7 +97,7 @@ services:
         condition: service_started
       db:
         condition: service_healthy
-      valkey:
+      redis:
         condition: service_healthy
       elasticsearch:
         condition: service_healthy
@@ -129,8 +129,8 @@ services:
       timeout: 10s
       retries: 5
 
-  valkey:
-    image: valkey/valkey:8.0.2-alpine
+  redis:
+    image: redis:4.0.11-alpine3.8
     profiles:
       - default
       - services
@@ -188,4 +188,4 @@ services:
       - PYTHONUNBUFFERED=1
     depends_on:
       - celery-worker
-      - valkey
+      - redis
