--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,7 @@
 envlist = py312
 
 [testenv:unit]
+runner = uv-venv-lock-runner
 description = Run unit tests
 dependency_groups = dev
 pass_env =
@@ -40,6 +41,7 @@ commands =
 
 
 [testenv:selenium]
+runner = uv-venv-lock-runner
 description = Run selenium tests
 dependency_groups = dev
 pass_env =
@@ -77,3 +79,31 @@ commands =
         --create-db \
         ./tests/selenium
 
+[testenv:mypy]
+runner = uv-venv-lock-runner
+description = run mypy type checking
+skip_install = false
+set_env =
+    PYTHONUNBUFFERED=1
+    SECRET_KEY=secretkey
+    ENV=dev
+    DEBUG=true
+    CELERY_BROKER_URL=redis://localhost:6379/0
+    CELERY_RESULT_BACKEND=redis://localhost:6379/0
+    CACHE_LOCATION=redis://localhost:6379/1
+    CACHE_ENABLED=false
+    CONSTANCE_REDIS_CONNECTION=redis://localhost:6379/0
+    DATABASE_URL=postgis://postgres:postgres@localhost:5432/postgres
+    REP_DATABASE_URL=postgis://postgres:postgres@localhost:5432/postgres
+    USE_DUMMY_EXCHANGE_RATES=yes
+    CELERY_TASK_ALWAYS_EAGER=true
+    ELASTICSEARCH_SYNONYMS_FILE={toxinidir}/src/data/synonyms.txt
+    ELASTICSEARCH_HOST=http://localhost:9200
+    DATA_VOLUME={toxinidir}/data
+    TESTS_ROOT={toxinidir}/tests/unit
+    PROJECT_ROOT={toxinidir}/src/hct_mis_api
+    OUTPUT_DATA_ROOT={toxinidir}/tests/selenium/output_data
+commands =
+    mypy .
+dependency_groups = dev
+uv_sync_flags = --no-editable
