--- a/tox.ini
+++ b/tox.ini
@@ -82,28 +82,43 @@ commands =
 [testenv:mypy]
 runner = uv-venv-lock-runner
 description = run mypy type checking
-skip_install = false
-set_env =
-    PYTHONUNBUFFERED=1
-    SECRET_KEY=secretkey
-    ENV=dev
-    DEBUG=true
-    CELERY_BROKER_URL=redis://localhost:6379/0
-    CELERY_RESULT_BACKEND=redis://localhost:6379/0
-    CACHE_LOCATION=redis://localhost:6379/1
-    CACHE_ENABLED=false
-    CONSTANCE_REDIS_CONNECTION=redis://localhost:6379/0
-    DATABASE_URL=postgis://postgres:postgres@localhost:5432/postgres
-    REP_DATABASE_URL=postgis://postgres:postgres@localhost:5432/postgres
-    USE_DUMMY_EXCHANGE_RATES=yes
-    CELERY_TASK_ALWAYS_EAGER=true
-    ELASTICSEARCH_SYNONYMS_FILE={toxinidir}/src/data/synonyms.txt
-    ELASTICSEARCH_HOST=http://localhost:9200
-    DATA_VOLUME={toxinidir}/data
-    TESTS_ROOT={toxinidir}/tests/unit
-    PROJECT_ROOT={toxinidir}/src/hct_mis_api
-    OUTPUT_DATA_ROOT={toxinidir}/tests/selenium/output_data
 commands =
     mypy .
 dependency_groups = dev
 uv_sync_flags = --no-editable
+
+[testenv:black]
+runner = uv-venv-lock-runner
+description = run mypy type checking
+commands =
+    black .
+dependency_groups = dev
+uv_sync_flags = --no-editable
+
+[testenv:isort]
+runner = uv-venv-lock-runner
+description = run mypy type checking
+commands =
+    isort .
+dependency_groups = dev
+uv_sync_flags = --no-editable
+
+[testenv:flake8]
+runner = uv-venv-lock-runner
+description = run flake8 type checking
+commands =
+    flake8 .
+dependency_groups = dev
+uv_sync_flags = --no-editable
+
+
+[testenv:lint]
+runner = uv-venv-lock-runner
+description = run mypy type checking
+commands =
+    black --check .
+    isort --check .
+    flake8 .
+dependency_groups = dev
+uv_sync_flags = --no-editable
+
