--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,50 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Python & UV
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: latest
+          enable-cache: true
+          prune-cache: false
+          cache-local-path: ./uv-cache
+          cache-dependency-glob: |
+            **/pyproject.toml
+            **/uv.lock
+          python-version: 3.12
+
+      - name: Restore cached vEnv
+        id: cache-venv-restore
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./venv
+            ./tox
+          key: ${{ runner.os }}-venv
+
+      - name: Install dependencies
+        run: uv sync --cache-dir ./uv-cache --frozen
+
+      - name: Save vEnv cache
+        id: cache-venv-save
+        uses: actions/cache@v4
+        with:
+          path: |
+            ./venv
+            ./tox
+          key: ${{ runner.os }}-venv
+
+      - name: Run Lint
+        run: uv run tox -e lint
+
+      - name: Run Mypy
+        run: uv run tox -e mypy
   test:
     runs-on: ubuntu-latest
     env:
@@ -111,11 +155,6 @@ jobs:
             ./tox
           key: ${{ runner.os }}-venv
 
-      - name: Run Lint
-        run: uv run tox -e lint
-
-      - name: Run Mypy
-        run: uv run tox -e mypy
 
       - name: Run Test suite
         run: uv run tox -e unit
