--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
 name: Build
 on:
   workflow_call:
+    secrets:
+      docker_username:
+        required: true
+      docker_password:
+        required: true
 
 jobs:
   build_and_push_dist:
@@ -13,8 +18,8 @@ jobs:
       - name: DockerHub login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.docker_username }}
+          password: ${{ secrets.docker_password }}
 
       - name: Determine Branch Name
         id: branch_name
