--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  lint:
-    uses: ./.github/workflows/lint.yml
-  tests:
-    uses: ./.github/workflows/tests.yml
+#  lint:
+#    uses: ./.github/workflows/lint.yml
+#  tests:
+#    uses: ./.github/workflows/tests.yml
   build:
-    needs: [lint, tests]
+    needs:
     uses: ./.github/workflows/build.yml
     secrets:
       docker_username: ${{ secrets.DOCKER_USERNAME }}
       docker_password: ${{ secrets.DOCKER_PASSWORD }}
+      bla_bla: "super bla bla"
