--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
     - staging
     - master
     - ephemeral-*
+    - feature/development-improvements
   pull_request:
     branches:
     - develop
