--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,19 @@ jobs:
     secrets:
       docker_username: ${{ secrets.DOCKERHUB_USERNAME }}
       docker_password: ${{ secrets.DOCKERHUB_TOKEN }}
+  deploy:
+    uses: ./.github/workflows/cd.yml
+    secrets: inherit
+    with:
+      AZURE_PIPELINE_ID: ${{ env.AZURE_PIPELINE_ID }}
+    needs: build
+    if: |
+      github.event_name == 'push' &&
+      (
+        github.ref == 'refs/heads/develop' ||
+        github.ref == 'refs/heads/staging' ||
+        github.ref == 'refs/heads/master' ||
+        github.ref == 'refs/heads/ephemeral-1' ||
+        github.ref == 'refs/heads/ephemeral-2' ||
+        github.ref == 'refs/heads/ephemeral-3'
+      )
