github actions adj

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
     uses: ./.github/workflows/cd.yml
     secrets: inherit
     with:
-      AZURE_PIPELINE_ID: ${{ env.AZURE_PIPELINE_ID }}
+      AZURE_PIPELINE_ID: ${{ vars.AZURE_PIPELINE_ID }}
     needs: build
     if: |
       github.event_name == 'push' &&
