--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,11 +2,6 @@ name: CD
 run-name: CD RUN ${{ github.ref_name }}
 on:
   workflow_call:
-    inputs:
-      AZURE_PIPELINE_ID:
-        required: true
-        type: string
-        description: 'Comma-separated list of Azure DevOps pipeline IDs to trigger'
 
 jobs:
   deploy:
@@ -16,6 +11,7 @@ jobs:
     steps:
       - name: Trigger deploy
         run: |
+          $AZURE_PIPELINE_ID=${{ vars.AZURE_PIPELINE_ID }}
           if [ -z "$AZURE_PIPELINE_ID" ]; then
             echo "❌ ERROR: $AZURE_PIPELINE_ID must be set" >&2
             exit 1
