--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Trigger deploy
         run: |
-          $AZURE_PIPELINE_ID=${{ vars.AZURE_PIPELINE_ID }}
+          $AZURE_PIPELINE_ID="${{ vars.AZURE_PIPELINE_ID }}"
           if [ -z "$AZURE_PIPELINE_ID" ]; then
             echo "❌ ERROR: $AZURE_PIPELINE_ID must be set" >&2
             exit 1
