--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,6 @@ on:
     - master
     - ephemeral-*
     - feature/development-improvements
-  pull_request:
-    branches:
-    - develop
-    - staging
-    - master
-    - ephemeral-*
-    - long-term/*
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -30,21 +23,8 @@ jobs:
       - lint
       - tests
     uses: ./.github/workflows/build.yml
-    secrets:
-      docker_username: ${{ secrets.DOCKERHUB_USERNAME }}
-      docker_password: ${{ secrets.DOCKERHUB_TOKEN }}
+    secrets: inherit
   deploy:
     uses: ./.github/workflows/cd.yml
     secrets: inherit
     needs: build
-    if: |
-      github.event_name == 'push' &&
-      (
-        github.ref == 'refs/heads/develop' ||
-        github.ref == 'refs/heads/staging' ||
-        github.ref == 'refs/heads/master' ||
-        github.ref == 'refs/heads/ephemeral-1' ||
-        github.ref == 'refs/heads/ephemeral-2' ||
-        github.ref == 'refs/heads/ephemeral-3' ||
-        github.ref == 'refs/heads/feature/development-improvements'
-      )
