--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -8,6 +8,8 @@ on:
     - master
     - ephemeral-*
     - long-term/*
+  workflow_call:
+
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
