fixes to tests runnning

--- a/tox.ini
+++ b/tox.ini
@@ -34,9 +34,9 @@ commands =
         --maxfail=2 \
         --reruns 3 \
         --reruns-delay 1 \
-        --cov-report xml:test-coverage/coverage.xml \
         --randomly-seed=42 \
         --create-db \
+        {posargs:} \
         ./tests/unit
 
 
