--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -96,8 +96,25 @@ jobs:
           key: ${{ runner.os }}-venv
 
 
-#      - name: Run Test suite
-#        run: uv run tox -e unit
+      - name: Run Test suite
+        run: uv run tox -e unit -- --cov-report xml:test-coverage/coverage.xml --junit-xml=test-results.xml
+
+      - name: Test Report
+        uses: dorny/test-reporter@v2
+        if: success() || failure()
+        with:
+          name: JEST Tests
+          path: test-results.xml
+          reporter: jest-junit
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        if: always()
+        continue-on-error: true
+        with:
+          files: ./test-coverage/coverage.xml
+          flags: e2e
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
       - name: Tear down Docker Compose
         if: always()
@@ -208,8 +225,33 @@ jobs:
             ./tox
           key: ${{ runner.os }}-venv
 
-#      - name: Run Selenium suite
-#        run: uv run tox -e selenium
+      - name: Run Selenium suite
+        run: uv run tox -e selenium -- --cov-report xml:test-coverage/coverage.xml --junit-xml=test-results.xml
+      - name: Test Report
+        uses: dorny/test-reporter@v2
+        if: success() || failure()
+        with:
+          name: JEST Tests
+          path: test-results.xml
+          reporter: jest-junit
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        if: always()
+        continue-on-error: true
+        with:
+          name: report
+          path: ./tests/selenium/output_data/
+          retention-days: 5
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        if: always()
+        continue-on-error: true
+        with:
+          files: ./test-coverage/coverage.xml
+          flags: e2e
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
       - name: Tear down Docker Compose
         if: always()
