--- a/tox.ini
+++ b/tox.ini
@@ -74,9 +74,9 @@ commands =
         --maxfail=2 \
         --reruns 3 \
         --reruns-delay 1 \
-        --cov-report xml:test-coverage/coverage.xml \
         --randomly-seed=42 \
         --create-db \
+        {posargs:} \
         ./tests/selenium
 
 [testenv:mypy]
