check tests speedup

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ set_env =
 commands =
     pytest \
         -rw \
-        -n 4 \
+        -n auto \
         --maxfail=2 \
         --reruns 3 \
         --reruns-delay 1 \
@@ -70,7 +70,7 @@ set_env =
 commands =
     pytest \
         -rw \
-        -n 4 \
+        -n auto \
         --maxfail=2 \
         --reruns 3 \
         --reruns-delay 1 \
