added no migrations

--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ set_env =
     PROJECT_ROOT={toxinidir}/src/hct_mis_api
 commands =
     pytest \
+        --no-migrations \
         -rw \
         -n auto \
         --maxfail=2 \
@@ -70,6 +71,7 @@ set_env =
 commands =
     pytest \
         -rw \
+        --no-migrations \
         -n auto \
         --maxfail=2 \
         --reruns 3 \
