fixed e2e tests runner

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,6 @@ commands =
     pytest \
         --no-migrations \
         -rw \
-        -n auto \
         --maxfail=2 \
         --reruns 3 \
         --reruns-delay 1 \
@@ -65,14 +64,13 @@ set_env =
     ELASTICSEARCH_SYNONYMS_FILE={toxinidir}/src/data/synonyms.txt
     ELASTICSEARCH_HOST=http://localhost:9200
     DATA_VOLUME={toxinidir}/data
-    TESTS_ROOT={toxinidir}/tests/unit
+    TESTS_ROOT={toxinidir}/tests/selenium
     PROJECT_ROOT={toxinidir}/src/hct_mis_api
     OUTPUT_DATA_ROOT={toxinidir}/tests/selenium/output_data
 commands =
     pytest \
         -rw \
         --no-migrations \
-        -n auto \
         --maxfail=2 \
         --reruns 3 \
         --reruns-delay 1 \
