--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -98,7 +98,7 @@ jobs:
 
 
       - name: Run Test suite
-        run: uv run tox -e unit -- --cov-report xml:test-coverage/coverage.xml --junit-xml=test-results.xml
+        run: uv run tox -e unit -- -n 4 --cov-report xml:test-coverage/coverage.xml --junit-xml=test-results.xml
 
       - name: Test Report
         uses: dorny/test-reporter@v2
@@ -227,7 +227,7 @@ jobs:
           key: ${{ runner.os }}-venv
 
       - name: Run Selenium suite
-        run: uv run tox -e selenium -- --cov-report xml:test-coverage/coverage.xml --junit-xml=test-results.xml
+        run: uv run tox -n 4 -e selenium -- --cov-report xml:test-coverage/coverage.xml --junit-xml=test-results.xml
       - name: Test Report
         uses: dorny/test-reporter@v2
         if: success() || failure()
