--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,8 @@ repos:
     hooks:
       - id: mypy
         exclude: "migrations|snapshots"
-        args: [ "--config-file", "pyproject.toml"]
+        pass_filenames: false
+        args: [ "--config-file", "pyproject.toml", "."]
         additional_dependencies:
           - django-stubs==1.12.0
           - django-stubs-ext==0.7.0
