--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,9 @@
 [tox]
 envlist = py312
+requires =
+    tox>=4.2
+    tox-gh-actions
+    tox-uv>=1.20.2
 
 [testenv:unit]
 runner = uv-venv-lock-runner
