--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,9 @@ requires =
     tox-gh-actions
     tox-uv>=1.20.2
 
+[testenv]
+basepython = python3.12
+
 [testenv:unit]
 runner = uv-venv-lock-runner
 description = Run unit tests
@@ -39,9 +42,7 @@ commands =
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
-        {posargs:} \
-        ./tests/unit
-
+        {posargs:./tests/unit}
 
 [testenv:selenium]
 runner = uv-venv-lock-runner
@@ -78,8 +79,7 @@ commands =
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
-        {posargs:} \
-        ./tests/selenium
+        {posargs:./tests/selenium}
 
 [testenv:mypy]
 runner = uv-venv-lock-runner
@@ -123,4 +123,3 @@ commands =
     flake8 .
 dependency_groups = dev
 uv_sync_flags = --no-editable
-
