--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,9 @@ requires =
     tox-gh-actions
     tox-uv>=1.20.2
 
+[testenv]
+basepython = python3.12
+
 [testenv:unit]
 runner = uv-venv-lock-runner
 description = Run unit tests
@@ -41,6 +44,7 @@ commands =
         --create-db \
         {posargs:} \
         ./tests/unit
+;        {posargs:./tests/unit}
 
 [testenv:selenium]
 runner = uv-venv-lock-runner
@@ -77,7 +81,9 @@ commands =
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
-        {posargs:./tests/selenium}
+        {posargs:} \
+        ./tests/selenium
+;        {posargs:./tests/selenium}
 
 [testenv:mypy]
 runner = uv-venv-lock-runner
