--- a/tox.ini
+++ b/tox.ini
@@ -42,9 +42,8 @@ commands =
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
-        {posargs:} \
-        ./tests/unit
-;        {posargs:./tests/unit}
+        {posargs:./tests/unit}
+
 
 [testenv:selenium]
 runner = uv-venv-lock-runner
@@ -81,9 +80,7 @@ commands =
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
-        {posargs:} \
-        ./tests/selenium
-;        {posargs:./tests/selenium}
+        {posargs:./tests/selenium}
 
 [testenv:mypy]
 runner = uv-venv-lock-runner
