--- a/tox.ini
+++ b/tox.ini
@@ -42,8 +42,8 @@ commands =
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
-        {posargs:./tests/unit}
-
+        {posargs:} \
+        ./tests/unit
 
 [testenv:selenium]
 runner = uv-venv-lock-runner
@@ -80,7 +80,8 @@ commands =
         --reruns-delay 1 \
         --randomly-seed=42 \
         --create-db \
-        {posargs:./tests/selenium}
+        {posargs:} \
+        ./tests/selenium
 
 [testenv:mypy]
 runner = uv-venv-lock-runner
@@ -113,7 +114,6 @@ commands =
     flake8 .
 dependency_groups = dev
 uv_sync_flags = --no-editable
-
 
 [testenv:lint]
 runner = uv-venv-lock-runner
