Upd tox init testenv (#4838)
* upd testenv

* tox

* test

* just basepython

* one more test

* just basepython

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,9 @@ requires =
     tox-gh-actions
     tox-uv>=1.20.2
 
+[testenv]
+basepython = python3.12
+
 [testenv:unit]
 runner = uv-venv-lock-runner
 description = Run unit tests
@@ -41,7 +44,6 @@ commands =
         --create-db \
         {posargs:} \
         ./tests/unit
-
 
 [testenv:selenium]
 runner = uv-venv-lock-runner
@@ -113,7 +115,6 @@ commands =
 dependency_groups = dev
 uv_sync_flags = --no-editable
 
-
 [testenv:lint]
 runner = uv-venv-lock-runner
 description = run mypy type checking
@@ -123,4 +124,3 @@ commands =
     flake8 .
 dependency_groups = dev
 uv_sync_flags = --no-editable
-
