--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ set_env =
     TESTS_ROOT={toxinidir}/tests/unit
     PROJECT_ROOT={toxinidir}/src/hct_mis_api
 commands =
-    pytest -s \
+    pytest \
         --no-migrations \
         -rw \
         --reruns 3 \
