--- a/.envrc.example
+++ b/.envrc.example
@@ -12,9 +12,7 @@ export AZURE_CLIENT_SECRET=
 export AZURE_TENANT_KEY=
 export STORAGE_AZURE_ACCOUNT_KEY=
 export STORAGE_AZURE_ACCOUNT_NAME=
-export KOBO_API_URL=https://kobo.humanitarianresponse.info
-export KOBO_KF_URL=https://kobo.humanitarianresponse.info
-export KOBO_KC_URL=https://kobo.humanitarianresponse.info
+export KOBO_URL=https://kobo.humanitarianresponse.info
 export ADMIN_PANEL_URL=unicorn
 export DJANGO_ALLOWED_HOST=localhost
 export HCT_MIS_FRONTEND_HOST=localhost:8000
