--- a/.github/helpers/.env-unit
+++ b/.github/helpers/.env-unit
@@ -8,8 +8,7 @@ REP_DATABASE_URL=postgis://postgres:postgres@db:5432/postgres
 EMAIL_HOST=TBD
 EMAIL_HOST_USER=TBD
 EMAIL_HOST_PASSWORD=TBD
-KOBO_KF_URL=https://kobo.humanitarianresponse.info
-KOBO_KC_URL=https://kobo.humanitarianresponse.info
+KOBO_URL=https://kobo.humanitarianresponse.info
 KOBO_MASTER_API_TOKEN=token
 EXCHANGE_RATES_API_KEY=token
 CACHE_LOCATION=redis://redis:6379/1
