--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -11,5 +11,5 @@ addopts =
         --capture=sys
         --reuse-db
         --echo-version django
-        #--cov-config=.coveragerc
-        #--cov=hct_mis_api
+        --cov-config=.coveragerc
+        --cov=hct_mis_api
