--- a/tox.ini
+++ b/tox.ini
@@ -124,3 +124,14 @@ commands =
     flake8 .
 dependency_groups = dev
 uv_sync_flags = --no-editable
+
+[testenv:clean]
+runner = uv-venv-lock-runner
+description = run mypy type checking
+commands =
+    black .
+    isort .
+    flake8 .
+    mypy .
+dependency_groups = dev
+uv_sync_flags = --no-editable
