API handling collisions Fixed handling Collission detection to use household object instead of identification key Fixing xlsx import for normal households Fixing filters for households RDI Dev command in python in manage.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,8 @@ exclude = [
     "snapshots",
     "__pypackages__",
     "build",
-    "uv-cache"
+    "uv-cache",
+    "manage.py"
 ]
 
 strict = true
