Fixes and tests

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,19 +1,19 @@
 [pytest]
 generate_report_on_test = True
 DJANGO_SETTINGS_MODULE = hct_mis_api.config.settings
-filterwarnings =
-    ignore::DeprecationWarning
-    ignore::PytestUnknownMarkWarning
-    ignore::PluggyTeardownRaisedWarning
+;filterwarnings =
+;    ignore::DeprecationWarning
+;    ignore::PytestUnknownMarkWarning
+;    ignore::PluggyTeardownRaisedWarning
 addopts =
         -sv
         -rP
         -p no:capturelog
         -p no:warnings
-        --tb=short
-        --maxfail=20
-        --capture=sys
-        --reuse-db
-        --echo-version django
-        --cov-config=.coveragerc
-        --cov=hct_mis_api
+;        --tb=short
+;        --maxfail=20
+;        --capture=sys
+;        --reuse-db
+;        --echo-version django
+;        --cov-config=.coveragerc
+;        --cov=hct_mis_api
