added more params

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -10,10 +10,10 @@ addopts =
         -rP
         -p no:capturelog
         -p no:warnings
-;        --tb=short
-;        --maxfail=20
-;        --capture=sys
-;        --reuse-db
-;        --echo-version django
-;        --cov-config=.coveragerc
-;        --cov=hct_mis_api
+        --tb=short
+        --maxfail=20
+        --capture=sys
+        --reuse-db
+        --echo-version django
+        --cov-config=.coveragerc
+        --cov=hct_mis_api
