fixing account handling on import colided individuals

--- a/tox.ini
+++ b/tox.ini
@@ -173,4 +173,5 @@ commands =
         -p no:warnings \
         --randomly-seed=42 \
         --create-db \
+        --cov-report= \
         {posargs: ./tests/unit}
